analyzer: handle array-initialization from a string_cst [PR113999]

gcc/analyzer/ChangeLog:
	PR analyzer/113999
	* analyzer.h (get_string_cst_size): New decl.
	* region-model-manager.cc (get_string_cst_size): New.
	(region_model_manager::maybe_get_char_from_string_cst): Treat
	single-byte accesses within string_cst but beyond
	TREE_STRING_LENGTH as being 0.
	* region-model.cc (string_cst_has_null_terminator): Likewise.

gcc/testsuite/ChangeLog:
	PR analyzer/113999
	* c-c++-common/analyzer/strlen-pr113999.c: New test.
	* gcc.dg/analyzer/strlen-1.c: More test coverage.

Signed-off-by: David Malcolm <dmalcolm@redhat.com>